@@ -1,0 +1,7 @@
+{
+    "tests": [
+        {
+            "filename": "main.cpp"
+        }
+    ]
+}
