@@ -1,0 +1,12 @@
+#include <QtCore/QObject>
+#include <QtCore/QString>
+
+class Test
+{
+
+  void test()
+  {
+    QMutex
+  }
+
+}
